@@ -56,6 +56,8 @@ New in v0.7.07 (2016/01/??)
 * Added acdclibackend.py from Stefan Breunig and Malay Shah
   - renamed from amazoncloudbackend to stress use of acd_cli
 * Fixed some 2to3 and Pep8 issues that had crept in
+* Backed out changes made by patching for bug #1541314.  These
+  patches should not have been applied to the 0.7 series.
 
 
 New in v0.7.06 (2015/12/07)
